# libparty

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  benchmark.sh
bench/: bench_hash.cpp  bench_ot_hl17.cpp
benchmarking/: baseOTs_0_1024_1.txt  baseOTs_0_1024_2.txt  baseOTs_0_1024_4.txt  baseOTs_0_1024_8.txt  baseOTs_0_128_1.txt  baseOTs_0_128_2.txt  baseOTs_0_128_4.txt  baseOTs_0_128_8.txt  baseOTs_0_256_1.txt  baseOTs_0_256_2.txt  baseOTs_0_256_4.txt  baseOTs_0_256_8.txt  baseOTs_1_1024_1.txt  baseOTs_1_1024_2.txt  baseOTs_1_1024_4.txt  baseOTs_1_1024_8.txt  baseOTs_1_128_1.txt  baseOTs_1_128_2.txt  baseOTs_1_128_4.txt  baseOTs_1_128_8.txt  baseOTs_1_256_1.txt  baseOTs_1_256_2.txt  baseOTs_1_256_4.txt  baseOTs_1_256_8.txt
src/curve25519/: LICENSE  mycurve25519.c  mycurve25519.h  mycurve25519_tables.h  util.c  util.h
src/network/: connection.hpp  devnull_connection.hpp  dummy_connection.cpp  dummy_connection.hpp  tcp_connection.cpp  tcp_connection.hpp
src/ot/: ot.cpp  ot.hpp  ot_co15.cpp  ot_co15.hpp  ot_hl17.cpp  ot_hl17.hpp
src/util/: options.cpp  options.hpp  queue.hpp  threading.cpp  threading.hpp  util.c  util.cpp  util.h  util.hpp
test/: test_curve25519.cpp  test_ot_co15.cpp  test_ot_hl17.cpp
